Integrate A* pathfinding algorithms and enhance project documentation
- Added `runeforge-color` as a dependency for improved pathfinding visualization.
- Updated `TASKLIST.md` to reflect progress, now showing 8/22 tasks completed (36%).
- Implemented A* pathfinding algorithm with both 4-directional and 8-directional movement options.
- Created a pathfinding visualization demo to showcase the A* algorithm in action.
- Enhanced `Cargo.toml` for `runeforge-pathfinding` with necessary dependencies and documentation updates.
- Improved code structure and added tests for pathfinding functionality.

--- a/crates/runeforge-pathfinding/Cargo.toml
+++ b/crates/runeforge-pathfinding/Cargo.toml
@@ -1,18 +1,19 @@
 [package]
-name = "runeforge-pathfinding"
-version.workspace = true
-edition.workspace = true
-rust-version.workspace = true
-license.workspace = true
-repository.workspace = true
+name                    = "runeforge-pathfinding"
+version.workspace       = true
+edition.workspace       = true
+rust-version.workspace  = true
+license.workspace       = true
+repository.workspace    = true
 documentation.workspace = true
-keywords.workspace = true
-categories.workspace = true
-description = "Pathfinding algorithms for the Runeforge roguelike library"
+keywords.workspace      = true
+categories.workspace    = true
+description             = "Pathfinding algorithms for the Runeforge roguelike library"
 
 [dependencies]
+runeforge-color    = { workspace = true }
 runeforge-geometry = { workspace = true }
-pathfinding = { workspace = true }
+pathfinding        = { workspace = true }
 
 [dev-dependencies]
 # criterion = { workspace = true }
