Enhance Runeforge with BSP dungeon generation and benchmarking
- Introduced `runeforge-bsp` crate for Binary Space Partitioning (BSP) dungeon generation.
- Implemented BSP algorithms with room and corridor generation, ensuring non-overlapping rooms and connectivity.
- Added benchmarks for BSP generation performance using `criterion`.
- Updated `TASKLIST.md` to reflect progress, now showing 10/22 tasks completed (45%).
- Created demo for visualizing BSP dungeon layouts in the terminal.
- Enhanced `Cargo.toml` for `runeforge-bsp` with necessary dependencies and documentation updates.

--- a/crates/runeforge-bsp/Cargo.toml
+++ b/crates/runeforge-bsp/Cargo.toml
@@ -20,3 +20,9 @@ default = []
 serialization = ["serde"]
 
 [dev-dependencies]
+runeforge-random = { workspace = true }
+criterion = { workspace = true }
+
+[[bench]]
+name    = "bsp_bench"
+harness = false
