--- a/crates/runeforge-pathfinding/Cargo.toml
+++ b/crates/runeforge-pathfinding/Cargo.toml
@@ -16,8 +16,8 @@ runeforge-geometry = { workspace = true }
 pathfinding        = { workspace = true }
 
 [dev-dependencies]
-# criterion = { workspace = true }
+criterion = { workspace = true }
 
-# [[bench]]
-# name = "pathfinding_bench"
-# harness = false
+[[bench]]
+name    = "pathfinding_bench"
+harness = false
