Implement glyph atlas and tileset loading for Runeforge
- Introduced `GlyphAtlas` for efficient text rendering with pre-rendered glyphs.
- Added `Tileset` for loading PNG tilesets, supporting sprite sheets for graphical rendering.
- Implemented font loading and rendering for TrueType and BDF bitmap fonts.
- Created error handling for tileset operations with `TilesetError`.
- Updated `Cargo.toml` for `runeforge-tileset` with necessary dependencies.
- Enhanced documentation with examples for font and tileset usage.
- Added tests for character encoding and tile dimensions.

--- a/crates/runeforge-tileset/Cargo.toml
+++ b/crates/runeforge-tileset/Cargo.toml
@@ -1,23 +1,25 @@
 [package]
-name = "runeforge-tileset"
-version.workspace = true
-edition.workspace = true
-rust-version.workspace = true
-license.workspace = true
-repository.workspace = true
+name                    = "runeforge-tileset"
+version.workspace       = true
+edition.workspace       = true
+rust-version.workspace  = true
+license.workspace       = true
+repository.workspace    = true
 documentation.workspace = true
-keywords.workspace = true
-categories.workspace = true
-description = "Font and tileset loading for the Runeforge roguelike library"
+keywords.workspace      = true
+categories.workspace    = true
+description             = "Font and tileset loading for the Runeforge roguelike library"
 
 [dependencies]
-ab_glyph = { workspace = true }
-image = { workspace = true }
-thiserror = { workspace = true }
+runeforge-color = { workspace = true }
+ab_glyph        = { workspace = true }
+bdf-parser      = { workspace = true }
+image           = { workspace = true }
+thiserror       = { workspace = true }
 
 [features]
-default = ["truetype", "bitmap"]
+default  = ["truetype", "bitmap"]
 truetype = []
-bitmap = []
+bitmap   = []
 
 [dev-dependencies]
