--- a/deny.toml
+++ b/deny.toml
@@ -3,11 +3,8 @@ targets = []
 all-features = true
 
 [advisories]
-db-path = "~/.cargo/advisory-db"
-vulnerability = "deny"
-unmaintained = "warn"
-yanked = "warn"
-notice = "warn"
+version = 2
+ignore = []
 
 [licenses]
 unlicensed = "deny"
