--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -160,11 +160,11 @@ rustflags = [
 [alias]
 ci = "run --package ci --"
 
-# [unstable]
-# codegen-backend = true
+[unstable]
+codegen-backend = true
 
-# [profile.dev]
-# codegen-backend = "cranelift"
+[profile.dev]
+codegen-backend = "cranelift"
 
-# [profile.dev.package."*"]
-# codegen-backend = "llvm"
+[profile.dev.package."*"]
+codegen-backend = "llvm"
