--- a/crates/runeforge-pixels/Cargo.toml
+++ b/crates/runeforge-pixels/Cargo.toml
@@ -9,6 +9,7 @@ documentation.workspace = true
 keywords.workspace      = true
 categories.workspace    = true
 description             = "GPU-accelerated rendering backend for Runeforge using pixels/wgpu"
+readme                  = "README.md"
 
 [dependencies]
 runeforge-color    = { workspace = true }
