--- a/crates/runeforge-noise/Cargo.toml
+++ b/crates/runeforge-noise/Cargo.toml
@@ -1,14 +1,15 @@
 [package]
-name = "runeforge-noise"
-version.workspace = true
-edition.workspace = true
-rust-version.workspace = true
-license.workspace = true
-repository.workspace = true
+name                    = "runeforge-noise"
+version.workspace       = true
+edition.workspace       = true
+rust-version.workspace  = true
+license.workspace       = true
+repository.workspace    = true
 documentation.workspace = true
-keywords.workspace = true
-categories.workspace = true
-description = "Procedural noise generation for the Runeforge roguelike library"
+keywords.workspace      = true
+categories.workspace    = true
+readme.workspace        = true
+description             = "Procedural noise generation for the Runeforge roguelike library"
 
 [dependencies]
 noise = { workspace = true }
