--- a/crates/runeforge-pathfinding/Cargo.toml
+++ b/crates/runeforge-pathfinding/Cargo.toml
@@ -8,12 +8,13 @@ repository.workspace    = true
 documentation.workspace = true
 keywords.workspace      = true
 categories.workspace    = true
+readme.workspace        = true
 description             = "Pathfinding algorithms for the Runeforge roguelike library"
 
 [dependencies]
-runeforge-color    = { workspace = true }
 runeforge-geometry = { workspace = true }
-pathfinding        = { workspace = true }
+rustc-hash         = { workspace = true }
+smallvec           = { workspace = true }
 
 [dev-dependencies]
 criterion = { workspace = true }
