--- a/crates/runeforge-tileset/Cargo.toml
+++ b/crates/runeforge-tileset/Cargo.toml
@@ -8,6 +8,7 @@ repository.workspace    = true
 documentation.workspace = true
 keywords.workspace      = true
 categories.workspace    = true
+readme.workspace        = true
 description             = "Font and tileset loading for the Runeforge roguelike library"
 
 [dependencies]
