Add configuration for cargo-deny and update dependencies
- Introduced `_deny.toml` for managing license and advisory checks in the project.
- Updated `Cargo.toml` to specify the `bdf-parser` dependency from a Git repository.
- Modified `Cargo.lock` to reflect changes in dependencies, including version updates and removals.
- Enhanced `deny.toml` with detailed configuration options for licenses, advisories, and bans, improving project compliance and security checks.
- Refactored `runeforge-tileset` to utilize updated dependencies and improve font loading functionality.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -75,7 +75,7 @@ bytemuck = "1.24.0"
 # Text rendering
 ab_glyph    = "0.2"
 cosmic-text = "0.15"
-bdf-parser  = "0.1"
+bdf-parser  = { git = "https://github.com/embedded-graphics/bdf.git", package = "bdf-parser" }
 
 # Images
 image = { version = "0.25", default-features = false, features = ["png"] }
