Implement BSP dungeon generation and cellular automata cave generation
- Added `bsp` module for Binary Space Partitioning (BSP) dungeon generation, including configuration and generator implementations.
- Introduced `caves` module for organic cave generation using cellular automata, with configuration and generator functionalities.
- Updated `Cargo.toml` to include new dependencies for `runeforge-random` and reflect changes in the project structure.
- Enhanced `lib.rs` to re-export core functionalities from the new modules, improving usability for users.
- Added tests for both BSP and cave generation to ensure functionality and reliability.

--- a/crates/runeforge-algorithms/Cargo.toml
+++ b/crates/runeforge-algorithms/Cargo.toml
@@ -13,6 +13,7 @@ description             = "Miscellaneous algorithms for the Runeforge roguelike 
 
 [dependencies]
 runeforge-geometry = { workspace = true }
+runeforge-random   = { workspace = true }
 bresenham          = { workspace = true }
 line_drawing       = { workspace = true }
 
