--- a/crates/runeforge-algorithms/Cargo.toml
+++ b/crates/runeforge-algorithms/Cargo.toml
@@ -8,7 +8,7 @@ repository.workspace    = true
 documentation.workspace = true
 keywords.workspace      = true
 categories.workspace    = true
-readme.workspace        = true
+readme                  = "README.md"
 description             = "Miscellaneous algorithms for the Runeforge roguelike library"
 
 [dependencies]
