chore(dependencies): add num-integer crate and fix fov implementation
- Added `num-integer` as a dependency in both the main workspace and the `runeforge-fov` crate.
- Refactored comparison methods in `runeforge-fov` to utilize `num-integer` for improved integer division handling.

--- a/crates/runeforge-fov/Cargo.toml
+++ b/crates/runeforge-fov/Cargo.toml
@@ -13,6 +13,7 @@ description             = "Field-of-view algorithms for the Runeforge roguelike 
 
 [dependencies]
 runeforge-geometry = { workspace = true }
+num-integer        = { workspace = true }
 
 [dev-dependencies]
 criterion          = { workspace = true }
