--- a/Cargo.toml
+++ b/Cargo.toml
@@ -87,9 +87,10 @@ bresenham    = "0.1"
 line_drawing = "1.0"
 
 # Utilities
-rand    = "0.9"
-palette = "0.7"
-flate2  = "1.1"
+rand        = "0.9"
+palette     = "0.7"
+flate2      = "1.1"
+num-integer = "0.1"
 
 # Performance optimizations
 rustc-hash = "2.0"  # Faster HashMap for integer keys
