--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ members = [
   "crates/runeforge-pixels",
   "crates/runeforge-input",
   "crates/runeforge-algorithms",
+  "examples/demo-game",
 ]
 
 [workspace.package]
