chore(cargo): comment out unstable features in config.toml
- Commented out the unstable codegen-backend settings in the Cargo configuration to prevent potential issues during builds.
- Updated profile settings to reflect the changes, ensuring clarity in the configuration file.

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -45,11 +45,11 @@ rustdocflags = ["-C", "linker=rust-lld.exe"]
 ci = "run --package ci --"
 
 # Cranelift backend for faster debug builds (if available)
-[unstable]
-codegen-backend = true
+# [unstable]
+# codegen-backend = true
 
-[profile.dev]
-codegen-backend = "cranelift"
+# [profile.dev]
+# codegen-backend = "cranelift"
 
-[profile.dev.package."*"]
-codegen-backend = "llvm"
+# [profile.dev.package."*"]
+# codegen-backend = "llvm"
